# NEURAL-ERP

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: build-images.yml  ci.yml
backend/: .env.example  .env.local.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  start.sh
backend/api-gateway/: Dockerfile  package.json
backend/database/: seed.js
backend/scripts/: backup.sh
backend/services/ml-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/services/ml-service/data/: README.md
backend/services/ml-service/src/: __init__.py  auth.py  config.py  disclosure.py  main.py
backend/services/ml-service/src/data/: __init__.py  live.py  schema.py  synthetic.py
backend/services/ml-service/src/models/: __init__.py  persistence.py  predict.py  train.py
backend/services/ml-service/src/routers/: __init__.py  health.py  predict.py  train.py
backend/services/ml-service/tests/: test_endpoints.py  test_models.py  test_synthetic.py
backend/tests/: academic-validators.test.js  admin-analytics.integration.test.js  auth-flow.integration.test.js  authMiddleware.test.js  career-recommend.integration.test.js  career-validators.test.js  env.test.js  errorHandler.test.js  forum-library-notes-validators.test.js  gateway.test.js  notification-timetable-admin-validators.test.js  response.test.js  (+3 more)
web/: .env.example  .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json
(+242 files in other folders)
